Release Notes - fae - Version v0.0.1.dev

** New Feature

    . lcache(local cache shared among processes)
    . memcache backend
    . dlog(distributed log)
    . query server version info through REST api

** Improvement

    . source code was greatly refactored and better organized
    . request context added, so we can do auditting

** Bug

    . when memcache key missed, exception thrown on client side


** Todo

    . becon 
    . graceful degrade
    . memcache/mongodb/dlog backend
      auto sharding
      stats sampling logging
    . self monitoring and peers

----